--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-rand = { version = "0.8.5", default-features = false, features = [
-    "std",
-    "small_rng",
-] }
+rand = { version = "0.8.5", default-features = false, features = ["alloc"] }
 rayon = "1.10.0"
+
+[dev-dependencies]
+rand = { version = "0.8.5" }
 
 [profile.dev.package."*"]
 opt-level = 1
