--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ rand = { version = "0.8.5", default-features = false, features = ["alloc"] }
 rayon = "1.10.0"
 
 [dev-dependencies]
-rand = { version = "0.8.5" }
+rand = "0.8.5"
+rand_distr = "0.4.3"
 
 [profile.dev.package."*"]
 opt-level = 1
