--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,7 @@ rand_distr = "0.4.3"
 [profile.dev.package."*"]
 opt-level = 1
 debug = true
+
+[[example]]
+name = "nsga2_binh_korn"
+path = "examples/nsga2/binh_korn.rs"
