--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+itertools = "0.13.0"
 rand = { version = "0.8.5", default-features = false, features = ["alloc"] }
 rayon = "1.10.0"
 
