--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,12 @@ edition = "2021"
 
 [dependencies]
 itertools = "0.13.0"
-rand = { version = "0.8.5", default-features = false, features = ["alloc"] }
+rand = { version = "0.8.5", default-features = false, features = [
+    "std",
+    "std_rng",
+] }
 rayon = "1.10.0"
+typed-builder = "0.20.0"
 
 [dev-dependencies]
 rand = "0.8.5"
