--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,7 @@ rand_distr = "0.4.3"
 [[example]]
 name = "nsga2_binh_korn"
 path = "examples/nsga2/binh_korn.rs"
+
+[[example]]
+name = "nsga2_schaffer_n1"
+path = "examples/nsga2/schaffer_n1.rs"
